# Drishti-AI-Navigator-App

./: .gitignore  Dockerfile  README.md
architecture/: AWS_Architecture_Diagrams.md  Drishti-AI-Navigator-Architecture.mermaid
backend/: .env.example  .gitignore  app.py  config.py  database.py  order_queue.py  pyproject.toml  requirements.txt
backend/agents/: nova_act_agent.py  strands_agent.py
backend/examples/: nova_sonic_demo.py  nova_sonic_s2s_demo.py
backend/services/: browser_service.py  secrets_manager.py  settings_service.py  voice_service.py
backend/tests/: test_voice_service.py
backend/tools/browser/: __init__.py  browser_manager.py  browser_tools.py  test_integration.py
frontend/: .gitignore  craco.config.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/public/shop/: checkout.html  index.html  product.html
frontend/src/: App.js
frontend/src/components/: CSVBatchWizard.js  CreateOrderWizard.js  LiveBrowserViewer.js  LiveScreenshotViewer.js  ModelSelector.js  OrderDashboard.js  SessionReplayViewer.js  VoiceOrderAssistant.js
frontend/src/hooks/: useResizeObserverFix.js
frontend/src/pages/: BatchUpload.js  CreateOrder.js  FailedOrders.js  MockShop.js  OrderDetails.js  ReviewQueue.js  SecretVault.js  Settings.js
frontend/src/services/: api.js  websocket.ts
frontend/src/types/: order.ts  session.ts
frontend/src/utils/: errorSuppression.js
